add user authorization
